# HomeWizard

./: Cargo.toml  README.md
src/: display_layer.rs  lib.rs  main.rs  solaredge.rs  wasm.rs  wifi_p1.rs
www/: index.html  index.js
