[package]
name = "p1_api"
version = "0.0.1"
authors = ["Geert Visser <visser.geert@gmail.com>"]
edition = "2018"

[dependencies]
json="0"
reqwest = { version = "0", features = ["json", "blocking"] }
serde ="1"
serde_json = "1"

plotters = "0.3.3"
wasm-bindgen = "0.2.82"
wee_alloc = "0.4.5"
web-sys = { version = "0.3.59", features = ["HtmlCanvasElement"] }
plotters-canvas = "0.3.0"

rusqlite = { version = "0.28.0", features = ["bundled"] }
